# json-yaml-comparison

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: flake8_linter  flake8_linter.yml  linter.yml  pylint.yml  pytest.yml  tests.yml
gendiff/: __init__.py  diff.py  generator.py  output.py  parser.py
gendiff/formatters/: __init__.py  json_diff.py  plain.py  serializing.py  stylish.py
gendiff/output/: __init__.py  change_value_fomat.py  json_diff.py  plain.py  serializing.py  stylish.py
gendiff/scripts/: gendiff.py  start.py
gendiff/tests/: test_generate_diff.py
tests/: test_diff.py  test_e2e_flat.py  test_e2e_nested.py  test_e2e_plain_format.py  test_flat.py  test_generate_diff.py  test_json_format.py
tests/fixtures/: file1.json  file1.yaml  file2.json  file2.yaml  file3.json  file3.yaml  file4.json  file4.yaml  result_flat.txt  result_half_empty.txt  result_json_format.json  result_nested.py  result_nested.txt  result_nested_my.txt
