[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Andrey <volk000@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.start:main"

[tool.poetry.dependencies]
python = "3.12"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
