[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "App compares two files (JSON or YAML) and shows the difference between them."
authors = ["Andrey <volk000@gmail.com>"]
readme = "README.md"
packages = [{ include = "gendiff" }]
repository = "https://github.com/Andrey-Volkovitskiy/python-project-50"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Operating System :: Unix",
    "Topic :: Utilities"
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.start:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
